--- a/player.html
+++ b/player.html
@@ -5,6 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script type="text/javascript" src="lib/jquery.js"></script>
+    <script type="text/javascript" src="lib/jquery.binarytransport.js"></script>
     <script type="text/javascript" src="lib/gunzip.min.js"></script>
     <script type="text/javascript" src="lib/EventEmitter.min.js"></script>
     <script type="text/javascript" src="lib/TweenLite.min.js"></script>
