added vision thingy

--- a/player.html
+++ b/player.html
@@ -297,7 +297,7 @@
             line-height: 24px;
         }
 
-        #matchSelector {
+        #header select {
             flex: 0;
             flex-basis: auto;
             main-size: auto;
