--- a/player.html
+++ b/player.html
@@ -193,9 +193,10 @@
         }
 
         #selectedBotPanel {
+            flex: 1;
             padding: 5px;
             min-height: 92px;
-            max-width: 250px;
+
             margin: 5px;
             border: 1px solid #ccc;
 
@@ -220,10 +221,11 @@
             flex: 1;
             padding: 0px 5px;
             font-size: 12px;
+
         }
 
         .teamStatsPanel {
-            max-width: 250px;
+
             min-height: 92px;
             border: 1px solid #ccc;
             padding: 5px;
