--- a/player.html
+++ b/player.html
@@ -74,21 +74,26 @@
         }
         .teamStatsPanel .upgrade img {
             width: 32px;
-            height: 32px;
             margin-bottom: -12px;
         }
 
         .teamStatsPanel .upgrade {
-            max-width: 40px;
+            border-radius: 3px;
+            background-color: #f0f0f0;
+            box-shadow: 2px 2px 2px #666;
+            margin: 3px;
+            padding: 0px 3px 3px 3px;
+            width: 32px;
             text-align: center;
             float: left;
         }
 
         .teamStatsPanel .upgrade progress {
-            width: 38px;
+            width: 30px;
             background-color: #666;
             height: 6px;
         }
+
         .teamStatsPanel .upgrade progress::-moz-progress-bar {
             background-color: #009c00;
         }
@@ -108,11 +113,11 @@
         }
 
         .teamPowerWrapper {
-            margin-right: 1px;
             height: 20px;
             border: 1px solid silver;
             border-top: none;
         }
+
         .teamPower {
             height: 20px;
             background-color: #FEC232;
@@ -238,7 +243,7 @@
 
 
         .teamStatsPanel {
-
+            position: relative;
             min-height: 92px;
             border: 1px solid #ccc;
             padding: 5px;
