--- a/player.html
+++ b/player.html
@@ -332,11 +332,14 @@
             border-radius: 4px;
             flex-basis: content;
             outline: none;
+            margin-left: 1px;
         }
 
         #header {
             display: flex;
             flex-direction: row;
+            padding: 1px;
+            border-bottom: 2px outset;
         }
 
         #timeSlider {
