added logo on load dialog

--- a/player.html
+++ b/player.html
@@ -135,9 +135,18 @@
             box-shadow: 0px 0px 5px black;
             text-align: center;
             padding: 10px;
+
             background-color: white;
+
         }
 
+        #loadDialog div.logo {
+            min-height: 80px;
+            background-image: url(img/blitzcode.png);
+            background-size: contain;
+            background-position: center center;
+            background-repeat: no-repeat;
+        }
         #loadDialog progress {
             width: 100%;
         }
